--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
 </head>
 <body>
   <div class="container">
-    <h1>Password Display App</h1>
+    <h1>Create Account</h1>
     <form id="passwordForm">
+     <label for="username">Enter UserName:</label>
+      <input type="username" id="username" placeholder="Enter your username">
       <label for="password">Enter Password:</label>
       <input type="password" id="password" placeholder="Enter your password">
       <button type="button" id="displayButton">Display Password</button>
     </form>
+    <p id="usernameDisplay"></p>
     <p id="passwordDisplay"></p>
   </div>
   <script src="script.js"></script>
